8247299: [lworld] Disable UseBiasedLocking by default
Reviewed-by: fparain