@@ -42,13 +42,9 @@ public class SyncOnPrimitiveWrapperTest {
     static List<Object> testObjects = new ArrayList<Object>();
 
     private static final String[] specificFlags[] = {
-        {"-Xint", "-XX:+UseBiasedLocking"},
         {"-Xint", "-XX:-UseBiasedLocking"},
-        {"-Xcomp", "-XX:TieredStopAtLevel=1", "-XX:+UseBiasedLocking"},
         {"-Xcomp", "-XX:TieredStopAtLevel=1", "-XX:-UseBiasedLocking"},
         {"-Xcomp", "-XX:-TieredCompilation", "-XX:-UseBiasedLocking"},
-        {"-Xcomp", "-XX:-TieredCompilation", "-XX:+UseBiasedLocking", "-XX:+UseOptoBiasInlining"},
-        {"-Xcomp", "-XX:-TieredCompilation", "-XX:+UseBiasedLocking", "-XX:-UseOptoBiasInlining"}
     };
 
     private static void initTestObjects() {
