@@ -40,54 +40,6 @@
  *                  -XX:-TieredCompilation
  *                  -Xbatch
  *                  -XX:CICompilerCount=1
- *                  -XX:+DoEscapeAnalysis -XX:+EliminateAllocations -XX:+EliminateLocks -XX:+EliminateNestedLocks -XX:+UseBiasedLocking
- *                  GetOwnedMonitorInfoWithEATest
- * @run main/othervm/native
- *                  -agentlib:GetOwnedMonitorInfoWithEATest
- *                  -XX:+UnlockDiagnosticVMOptions
- *                  -Xms128m -Xmx128m
- *                  -XX:CompileCommand=dontinline,*::dontinline_*
- *                  -XX:+PrintCompilation
- *                  -XX:+PrintInlining
- *                  -XX:-TieredCompilation
- *                  -Xbatch
- *                  -XX:CICompilerCount=1
- *                  -XX:+DoEscapeAnalysis -XX:+EliminateAllocations -XX:-EliminateLocks -XX:+EliminateNestedLocks -XX:+UseBiasedLocking -XX:-UseOptoBiasInlining
- *                  GetOwnedMonitorInfoWithEATest
- * @run main/othervm/native
- *                  -agentlib:GetOwnedMonitorInfoWithEATest
- *                  -XX:+UnlockDiagnosticVMOptions
- *                  -Xms128m -Xmx128m
- *                  -XX:CompileCommand=dontinline,*::dontinline_*
- *                  -XX:+PrintCompilation
- *                  -XX:+PrintInlining
- *                  -XX:-TieredCompilation
- *                  -Xbatch
- *                  -XX:CICompilerCount=1
- *                  -XX:+DoEscapeAnalysis -XX:-EliminateAllocations -XX:+EliminateLocks -XX:+EliminateNestedLocks -XX:+UseBiasedLocking
- *                  GetOwnedMonitorInfoWithEATest
- * @run main/othervm/native
- *                  -agentlib:GetOwnedMonitorInfoWithEATest
- *                  -XX:+UnlockDiagnosticVMOptions
- *                  -Xms128m -Xmx128m
- *                  -XX:CompileCommand=dontinline,*::dontinline_*
- *                  -XX:+PrintCompilation
- *                  -XX:+PrintInlining
- *                  -XX:-TieredCompilation
- *                  -Xbatch
- *                  -XX:CICompilerCount=1
- *                  -XX:-DoEscapeAnalysis -XX:-EliminateAllocations -XX:+EliminateLocks -XX:+EliminateNestedLocks -XX:+UseBiasedLocking
- *                  GetOwnedMonitorInfoWithEATest
- * @run main/othervm/native
- *                  -agentlib:GetOwnedMonitorInfoWithEATest
- *                  -XX:+UnlockDiagnosticVMOptions
- *                  -Xms128m -Xmx128m
- *                  -XX:CompileCommand=dontinline,*::dontinline_*
- *                  -XX:+PrintCompilation
- *                  -XX:+PrintInlining
- *                  -XX:-TieredCompilation
- *                  -Xbatch
- *                  -XX:CICompilerCount=1
  *                  -XX:+DoEscapeAnalysis -XX:+EliminateAllocations -XX:+EliminateLocks -XX:+EliminateNestedLocks -XX:-UseBiasedLocking
  *                  GetOwnedMonitorInfoWithEATest
  * @run main/othervm/native
